static/scss/404.scss
@use 'sass:math';

@import 'utils/mixins';
@import 'utils/vars';
@import 'utils/font';

@import 'cursor';


/* Three.js */
.notfound-webgl {
  position: fixed;
  top: 0;
  left: 0;
  outline: none;
  z-index: 3;
}

/** Body **/
body {
  margin: 0;
  background-color: map-get(map-get($palettes, yellow), light);
  cursor: none;
}

main {
  position: absolute;
  z-index: 1;
}


/** Contents **/

$centered_width: 200;   // width of the elements in the screen
$loadFromTopX: 40;      // number from the top of the screen
$progressPadding: 8;   // padding between the load animation and the progress

.notfound-wrapper {
  height: 100vh;
  z-index: 10;
  position: absolute;
  width: 100vw;
  background-color: map-get(map-get($palettes, yellow), light);
  @include flexbox($direction: column, $alignItems: center, $justifyContent: center, $grow: 1);


  /** Background title **/
  .title {
    top: ($loadFromTopX * 1%) + ($progressPadding * 1%) + 10%;
    left: calc(50% - #{math.div($centered-width, 2)}px);
    font-size: 20vw;
    opacity: .15;
    transform: translateY(5%);
    font-family: Canela;
    font-style: italic;
    color: transparent;
    -webkit-text-stroke-color: #29363C;
    -webkit-text-stroke-width: 1px;
    margin-top: -100px;
  }

  .title--subtext {
    color: map-get(map-get($palettes, red), dark);
    -webkit-text-stroke-color: unset;
    -webkit-text-stroke-width: 0;
  }
}

.info-container {
  position: absolute;
  width: 100vw;
  height: 100vh;
  font-family: Rossanova;
  color: map-get(map-get($palettes, darkblue), base);
  pointer-events: none;
  @include flexbox($direction: column, $alignItems: center, $justifyContent: space-between, $grow: 1);
  z-index: 4;

  .go-back-wrapper {
    @include flexbox($direction: column, $alignItems: center, $justifyContent: end, $grow: 1);
    margin-bottom: 30px;
    text-align: center;
  }

  .tutorial-wrapper {
    @include flexbox($direction: column, $alignItems: center, $justifyContent: start, $grow: 1);
    margin-top: 30px;
    text-align: center;
    opacity: 0.3
  }

  #go-back-span {
    pointer-events: visible;
    color: map-get(map-get($palettes, red), dark);
  }
}

.redirect-overlay {
  position: absolute;
  width: 100vw;
  height: 100vh;
  background-color: map-get(map-get($palettes, yellow), light);
  opacity: 0;
  z-index: 100000;
  pointer-events: none;
}

